--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
+    "serve": "^13.0.2",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
