--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "bootstrap": "^5.1.3",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.0.1",                           
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "formik": "^2.2.6",
+    "http-errors": "^1.8.0",
+    "pg": "^8.5.0",
+    "pg-promise": "^10.8.1",
     "react": "^16.3.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-table-next": "^4.0.3",
@@ -22,7 +31,8 @@
     "react-scripts": "5.0.0",
     "react-slick": "^0.29.0",
     "serve": "^13.0.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
