--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "js-yaml": "^3.14.1",
     "moment": "^2.29.1",
     "pg": "^8.5.0",
-    "pg-promise": "^10.8.1"
+    "pg-promise": "^10.8.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
